# aiobscura

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.beads/: issues.jsonl
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.plans/: dashboard-redesign.md
aiobscura/: Cargo.toml
aiobscura-core/: Cargo.toml
aiobscura-core/src/: config.rs  error.rs  format.rs  lib.rs  logging.rs  types.rs
aiobscura-core/src/analytics/: dashboard.rs  engine.rs  metrics_registry.rs  mod.rs  personality.rs  project.rs  wrapped.rs
aiobscura-core/src/analytics/plugins/: mod.rs
aiobscura-core/src/analytics/plugins/edit_churn/: mod.rs
aiobscura-core/src/analytics/plugins/first_order/: mod.rs
aiobscura-core/src/analytics/plugins/outcome/: mod.rs
aiobscura-core/src/assessment/: mod.rs
aiobscura-core/src/collector/: client.rs  events.rs  mod.rs  publisher.rs
aiobscura-core/src/db/: mod.rs  repo.rs  schema.rs
aiobscura-core/src/ingest/: mod.rs  parser.rs
aiobscura-core/src/ingest/parsers/: claude.rs  codex.rs  mod.rs
aiobscura-core/tests/: integration.rs
aiobscura-core/tests/fixtures/claude-code/: agent-a1234567.jsonl  malformed-lines.jsonl  minimal-session.jsonl  truncated.jsonl  with-agent-spawn.jsonl  with-tool-calls.jsonl
aiobscura-core/tests/fixtures/codex/: minimal-session.jsonl  with-tool-calls.jsonl
aiobscura-tui/: Cargo.toml
aiobscura-tui/src/: app.rs  debug.rs  debug_claude.rs  debug_claude_watch.rs  debug_codex.rs  main.rs  sync.rs  thread_row.rs  ui.rs
aiobscura-wrapped/: Cargo.toml
aiobscura-wrapped/src/: main.rs
aiobscura/src/: analyze.rs  app.rs  collector.rs  debug_claude.rs  debug_claude_watch.rs  debug_codex.rs  debug_codex_watch.rs  main.rs  message_format.rs  process_lock.rs  sync.rs  thread_row.rs  ui.rs
aiobscura/src/app/: live.rs  plan.rs  project.rs  wrapped.rs
aiobscura/src/ui/: detail.rs  live.rs  project.rs  wrapped.rs
aiobscura/src/ui/detail/: session.rs
aiobscura/tests/: cli_acceptance.rs
benches/: benchmark.rs
docs/: abstraction-layer-analysis.md  aiobscura-architecture.md  aiobscura-requirements.md  analytics-plugins.md  central-collector-setup.md  claude-code-log-format.md  codex-log-format.md  design-collector-client.md  edit-churn-algorithm.md  ubiquitous-language.md  workflow-tagging.md
examples/: basic.rs
tests/: integration.rs
