[workspace]
members = ["aiobscura-core", "aiobscura-tui", "aiobscura-wrapped"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kulesh Shanmugasundaram"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kulesh/aiobscura"

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Alarm if cli incompatible)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build for
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
# A GitHub repo to push Homebrew formulas to
tap = "kulesh/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
