[package]
name = "aiobscura-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.9"
dirs = "6"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# JSON for raw_data storage
serde_json = "1.0"

# File discovery
glob = "0.3"

# UUID generation
uuid = { version = "1.20", features = ["v4"] }

# HTTP client for Catsyphon collector
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
urlencoding = "2.1"

# Async runtime (from workspace)
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
