[package]
name = "aiobscura-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aiobscura"
path = "src/main.rs"

[[bin]]
name = "aiobscura-debug-claude"
path = "src/debug_claude.rs"

[[bin]]
name = "aiobscura-debug-codex"
path = "src/debug_codex.rs"

[dependencies]
aiobscura-core = { path = "../aiobscura-core" }
anyhow.workspace = true
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
