[package]
name = "aiobscura-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aiobscura"
path = "src/main.rs"

[[bin]]
name = "aiobscura-debug-claude"
path = "src/debug_claude.rs"

[[bin]]
name = "aiobscura-debug-codex"
path = "src/debug_codex.rs"

[[bin]]
name = "aiobscura-debug-claude-watch"
path = "src/debug_claude_watch.rs"

[[bin]]
name = "aiobscura-debug-codex-watch"
path = "src/debug_codex_watch.rs"

[[bin]]
name = "aiobscura-sync"
path = "src/sync.rs"

[dependencies]
aiobscura-core = { path = "../aiobscura-core" }
anyhow.workspace = true
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"
indicatif = "0.17"
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3.4"

[dev-dependencies]
