[package]
name = "aiobscura-wrapped"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI Agent Wrapped - Year in Review CLI"

[[bin]]
name = "aiobscura-wrapped"
path = "src/main.rs"

[dependencies]
aiobscura-core = { path = "../aiobscura-core" }
anyhow.workspace = true
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
