[package]
name = "aiobscura-wrapped"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/kulesh/aiobscura"
description = "AI Agent Wrapped - Year in Review CLI"

[[bin]]
name = "aiobscura-wrapped"
path = "src/main.rs"

[dependencies]
aiobscura-core = { path = "../aiobscura-core" }
anyhow.workspace = true
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
