[package]
name = "aiobscura"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/kulesh/aiobscura"
description = "AI Agent Activity Monitor"

[[bin]]
name = "aiobscura"
path = "src/main.rs"

[[bin]]
name = "aiobscura-sync"
path = "src/sync.rs"

[[bin]]
name = "aiobscura-analyze"
path = "src/analyze.rs"

[[bin]]
name = "aiobscura-collector"
path = "src/collector.rs"

[dependencies]
aiobscura-core = { path = "../aiobscura-core" }
anyhow.workspace = true
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
notify = "8"
notify-debouncer-mini = "0.7"
indicatif = "0.18"
ratatui = "0.30"
crossterm = "0.29"
ctrlc = "3.5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
